@@ -1,0 +1,2 @@
+%Error: Attempt to create model using a bad/deleted VerilatedContext pointer
+Aborting...
