@@ -14,6 +14,7 @@ Verilator 4.223 devel
 **Minor:**
 
 * Support compile time trace signal selection with tracing_on/off (#3323). [Shunyao CAD]
+* Add assert when VerilatedContext is mis-deleted (#3121). [Ruptert Swarbrick]
 * Fix hang with large case statement optimization (#3405). [Mike Urbach]
 * Fix 'with' operator with type casting (#3387). [xiak95]
 
